# xii-django-river

./: .codacy.yml  .coveragerc  .gitignore  MANIFEST.in  README.rst  SECURITY.md  TECH_DEBT.md  pyproject.toml  requirements.txt  setup.py  test_urls.py  tox.ini
.github/workflows/: ci.yml  pythonpublish.yml
docs/: Makefile  authorization.rst  changelog.rst  conf.py  faq.rst  getting_started.rst  index.rst  overview.rst  security.rst
docs/admin/: index.rst  transition_approval_meta.rst  transition_meta.rst
docs/api/: instance.rst
docs/hooking/: function.rst  hooking.rst
docs/migration/: index.rst  migration_2_to_3.rst  migration_31_to_32.rst  migration_river_to_xii_django_river.rst
features/: environment.py  issue_tracking_flow.feature
features/steps/: basic_steps.py  issue_tracking_steps.py
river/: apps.py  config.py  sandbox.py  signals.py
river/admin/: function_admin.py
river/core/: classworkflowobject.py  instanceworkflowobject.py  riverobject.py  workflowregistry.py
river/driver/: mssql_driver.py  orm_driver.py
river/migrations/: 0001_initial.py  0002_alter_onapprovedhook_callback_function_and_more.py  0003_unify_object_id_and_indexes.py  0004_alter_function_options_function_approved_at_and_more.py  0005_alter_function_options_alter_functionrevision_action.py  0006_functionrevision_changed_by_username.py
river/models/: base_model.py  factories.py  function.py  hook.py  (+8 more)
rivertest/: flowbuilder.py
settings/: base.py  for_behave.py  for_migrations_check.py  with_mssql.py  with_mysql.py  with_postgresql.py  with_sqlite3.py
xii/: __init__.py
(+93 files in other folders)
